some improvements to Dashboard pages

--- a/big_picture_dashboard.html
+++ b/big_picture_dashboard.html
@@ -73,13 +73,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>See the big picture</h2>                    
+					<h2>Analyse ETS Policies</h2>                    
 				</div>
 			</div>
             <div class="row">
-                <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=euwide">
-                    <img class="col-md-12 img-responsive" src="images/big_picture_main_image.png" alt="See the main picture">
-                </a>                
+                <div class="col-md-12">
+                    <p>
+                        Customise the chart to show the effect of EU ETS policies and instruments. You can also select to including or exclude emissions from aviation.
+                    </p>
+                     <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=euwide">
+                        <img class="img-responsive" src="images/big_picture_main_image.png" alt="See the main picture">
+                    </a> 
+                </div>                              
             </div>
             <br>
             <br>
@@ -97,7 +102,7 @@
 				    <div class="about-inner">
 						<img class="img-responsive" src="images/icons/aviation_100.png"  width="120" alt="Filter data by sector">
 						<h3>Include/exclude aviation data</h3>
-						<p>You can easily include, exclude or show only aviation data by means of a drop down menu. This gives the possibility to interpret the numbers variation depending on the different scenarios availabel.</p>
+						<p>You can easily include, exclude or show only aviation data by means of a drop down menu. This gives the possibility to interpret the numbers variation depending on the different scenarios available.</p>
 					</div>
 				</div>				
 			</div>
