--- a/explore_trends_dashboard.html
+++ b/explore_trends_dashboard.html
@@ -74,13 +74,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Explore trends</h2>                    
+					<h2>Explore Emissions Trends</h2>                    
 				</div>
 			</div>
             <div class="row">
-                <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=trends">
-                    <img class="col-md-12 img-responsive" src="images/explore_trends_main_image.png" alt="Explore trends">
-                </a>                
+                <div class="col-md-12">
+                    <p>
+                        Historic emissions data is available for each year since 2008 and can be used to plot trends in emission levels, free allocation and offsets. Filters make it possible to focus on specific countries, sectors or time periods with the option to include or exclude power installations.
+                    </p>
+                    <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=trends">
+                        <img class="img-responsive" src="images/explore_trends_main_image.png" alt="Explore trends">
+                    </a> 
+                </div>                               
             </div>
             <br>
             <br>
