--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<div class="col-md-6">
 					<a href="explore_trends_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_line_chart.png);">
 						<div class="desc">
-							<h3>Explore trends</h3>
+							<h3>Explore Emissions Trends</h3>
 							<span>Compare data across time</span>
 						</div>
 					</a>
@@ -102,7 +102,7 @@
 						<div class="col-md-6">
 							<a href="map_the_emissions_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_map1.png);">
 								<div class="desc">
-									<h3>Map the Emissions</h3>
+									<h3>Mapping EUETS Emissions</h3>
 									<span>Navigate through installations</span>
 								</div>
 							</a>
@@ -110,7 +110,7 @@
 						<div class="col-md-6">
 							<a href="./big_picture_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_eu_wide_chart.png);">
 								<div class="desc">
-									<h3>See the big picture</h3>
+									<h3>Analyse ETS Policies</h3>
 									<span>Analyze the system at a EU wide scale</span>
 								</div>
 							</a>
@@ -125,7 +125,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<h2>A new way to access emissions data</h2>
-					<p>Data on power and industry greenhouse gas emissions for every installation in the 28 Member States. </p>
+					<p>Data on power and industry greenhouse gas emissions for every installation. </p>
 				</div>
 			</div>
 			<div class="row">
