--- a/map_the_emissions_dashboard.html
+++ b/map_the_emissions_dashboard.html
@@ -73,13 +73,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Map the emissions</h2>                    
+					<h2>Mapping EUETS Emissions</h2>                    
 				</div>
 			</div>
             <div class="row">
-                <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=map">
-                    <img class="col-md-12 img-responsive" src="images/map_the_emissions_main_image.png" alt="Map the emissions">
-                </a>                
+                <div class="col-md-12 ">
+                    <p>
+                        The emissions map is a visualisation of greenhouse gas emission sources covered by the EU ETS. It shows the most recent data available on regional emissions as well as individual installations. The tool can be used to identify sources of industrial emissions by country and sector.
+                    </p>
+                    <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=map">
+                        <img class="img-responsive" src="images/map_the_emissions_main_image.png" alt="Map the emissions">
+                    </a> 
+                </div>                               
             </div>
             <br>
             <br>
