--- a/filter_data_dashboard.html
+++ b/filter_data_dashboard.html
@@ -77,9 +77,14 @@
 				</div>
 			</div>
             <div class="row">
-                <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=sectors">
-                    <img class="col-md-12 img-responsive" src="images/filter_data_main_image.png" alt="Filter data in real time">
-                </a>                
+                <div class="col-md-12">
+                    <p>
+                        Sandbag's EU ETS dashboard is a powerful tool for tracking the performance of EU ETS policies on each industrial sector and Member State across different years. It provides a visual way of exploring ETS emissions data and policy instruments and includes functions to help you filter data and create charts on the fly to show the impact of the EU ETS.
+                    </p>
+                    <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=sectors">
+                        <img class="img-responsive" src="images/filter_data_main_image.png" alt="Filter data in real time">
+                    </a>                     
+                </div>                               
             </div>
             <br>
             <br>
