minor change in footer

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -550,7 +550,7 @@
     <!-- /#wrapper -->
     <footer class="footer navbar-fixed-bottom">
       <div class="container text-center">
-        <p class="text-muted">© 2016 Sandbag Climate Campaign CIC </p>
+          <p class="text-muted">© 2016 Sandbag Climate Campaign CIC. <span><i>Have some feedback? Please send it to <a href="mailto:info@sandbag.org.uk">info@sandbag.org.uk</a></i></span> </p>
       </div>
     </footer>   
 
