minor fix at page

--- a/big_picture_dashboard.html
+++ b/big_picture_dashboard.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <p>
-                        Customise the chart to show the effect of EU ETS policies and instruments. You can also select to including or exclude emissions from aviation.
+                        Customise the chart to show the effect of EU ETS policies and instruments. You can also select to include or exclude emissions from aviation.
                     </p>
                      <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=euwide">
                         <img class="img-responsive" src="images/big_picture_main_image.png" alt="See the main picture">
