fixes at dashboard website

--- a/map_the_emissions_dashboard.html
+++ b/map_the_emissions_dashboard.html
@@ -92,7 +92,7 @@
 				<div class="col-md-12">
 				    <div class="about-inner">
 						<img class="img-responsive" src="images/map_aggregations.png" width="350" alt="Map aggregations">
-						<h3>Aggregations of intallations</h3>
+						<h3>Aggregations of installations</h3>
 						<p>Nearby installations emissions are aggregated and displayed as circles which are proportional both in size and color to the value they represent. Hover over them and you will see the specific area they represent. Just click on the circles if you want to zoom into it.</p>
 					</div>
 				</div>				
@@ -123,7 +123,7 @@
         <div class="container">		
 			
 			<div class="col-md-12 fh5co-copyright text-center">
-                <p>&copy; 2016 Sandbag Climate Campaign. <span>Have some feedback? Please send it to <a href="mailto:info@sandbag.org.uk">info@sandbag.org.uk</a></span> <span>Page based on Free HTML5 template by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></p>	
+                <p>&copy; 2016 Sandbag Climate Campaign. <span>Have some feedback? Please send it to <a href="mailto:info@sandbag.org.uk">info@sandbag.org.uk</a></span> <span>Page template from <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></p>	
 			</div>
 			
 		</div>
