--- a/map_the_emissions_dashboard.html
+++ b/map_the_emissions_dashboard.html
@@ -80,10 +80,12 @@
                 <div class="col-md-12 ">
                     <p>
                         The emissions map is a visualisation of greenhouse gas emission sources covered by the EU ETS. It shows the most recent data available on regional emissions as well as individual installations. The tool can be used to identify sources of industrial emissions by country and sector.
-                    </p>
+                    </p>                    
                     <a href="http://sandbag-climate.github.io/EU_ETS_Dashboard.html?goto=map">
                         <img class="img-responsive" src="images/map_the_emissions_main_image.png" alt="Map the emissions">
                     </a> 
+                    <p><i>The Dashboard is built using data from the EUTL. However, some data within that is incorrect, including map coordinates. Please let us know if you spot mistakes so that we can correct them.</i>
+                    </p>
                 </div>                               
             </div>
             <br>
