fixes at dashboard website

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 services-inner text-center">
-					<span><i class="fa fa-users"></i></i></span>
-					<h3>100% Open Source</h3>
+                    <span><a href="os_technologies_dashboard.html"><i class="fa fa-users"></i></a></span>
+                <h3><a href="os_technologies_dashboard.html">100% Open Source</a></h3>
 					<p><a href="http://www.sandbag.org.uk"><strong>Sandbag</strong></a> has a commitment to Open Source Software. We believe in the benefits of making our tools available to the community for free as part of an effort to fight against Climate Change. The EU ETS Dashboard is released under the <a href="https://www.gnu.org/licenses/agpl-3.0.en.html"><strong>AGPLv3</strong></a> license.
                     Check <a href="os_technologies_dashboard.html"><strong>this section</strong></a> for information about the open source libraries used.</p>
 				</div>
@@ -184,7 +184,7 @@
 		<div class="container">		
 			
 			<div class="col-md-12 fh5co-copyright text-center">
-                <p>&copy; 2016 Sandbag Climate Campaign. <span>Have some feedback? Please send it to <a href="mailto:info@sandbag.org.uk">info@sandbag.org.uk</a></span> <span>Page based on Free HTML5 template by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></p>	
+                <p>&copy; 2016 Sandbag Climate Campaign. <span>Have some feedback? Please send it to <a href="mailto:info@sandbag.org.uk">info@sandbag.org.uk</a></span> <span>Page template from <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a></span></p>	
 			</div>
 			
 		</div>
