minor fix at navbar collapsing for phones

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -63,22 +63,22 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active">
+                <li class="active" data-toggle="collapse" data-target=".navbar-collapse">                    
                   <a id="eu_wide_chart_button" href="#"><i class="fa fa-globe fa-fw"></i>EU wide</a>
                 </li>
-                <li>
+                <li data-toggle="collapse" data-target=".navbar-collapse">
                     <a id="country_sector_chart_button" href="#"><i class="fa fa-database fa-fw"></i>Country/sector</a>
                 </li>
-                <li>
+                <li data-toggle="collapse" data-target=".navbar-collapse">
                     <a id="installations_button" href="#"><i class="fa fa-industry fa-fw"></i>Installations</a>
                 </li>
-                <li>
+                <li data-toggle="collapse" data-target=".navbar-collapse">
                     <a id="stacked_bar_chart_button" href="#"><i class="fa fa-calendar fa-fw"></i>Data per period</a>
                 </li>  
-                <li>
+                <li data-toggle="collapse" data-target=".navbar-collapse">
                   <a id="about_button" href="#"><i class="fa fa-edit fa-fw"></i>About</a>
                 </li>
-                <li>
+                <li data-toggle="collapse" data-target=".navbar-collapse">
                   <a id="contact_us_button" href="#"><i class="fa fa-envelope fa-fw"></i>Feedback</a>
                 </li>                            
               </ul>    
