filter chart drop down menu alignment responsive to screen size

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -139,7 +139,7 @@
                                         Filter chart
                                         <span class="caret"></span>
                                     </button>
-                                    <div class="list-group dropdown-menu pull-right" data-toggle="items"  >     
+                                    <div id="filter_eu_wide_chart_dropdown_div" class="list-group dropdown-menu dropdown-menu-right" data-toggle="items"  >     
                                         <div class="checkbox">
                                             <input onclick="filterDataForEUWideChart()" id="offsets_eu_wide_checkbox" type="checkbox" checked="checked">
                                           <label for="offsets_eu_wide_checkbox">Offsets</label>
