cumulative surplus added to country sector view

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -226,7 +226,11 @@
                                         <div class="checkbox">
                                             <input onclick="filterDataForLineChart()" id="verified_emissions_checkbox" type="checkbox" checked="checked">
                                           <label for="verified_emissions_checkbox">Verified Emissions</label>
-                                        </div>                                        
+                                        </div>    
+                                        <div class="checkbox">
+                                            <input onclick="filterDataForLineChart()" id="cumulative_surplus_checkbox" type="checkbox" checked="checked">
+                                          <label for="cumulative_surplus_checkbox">Cumulative Surplus</label>
+                                        </div> 
                                     </div> 
                                 </div>
                             </div>
