minor changes to website

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<h2>EU ETS Dashboard, an interactive tool to analyze data from the European Union Emission Trading System</h2>
+					<h2>EU ETS Dashboard, an interactive tool to analyse data from the European Union Emission Trading System</h2>
                     <button type="button" class="btn btn-primary" onclick="window.location.href='http://sandbag-climate.github.io/EU_ETS_Dashboard.html'">Try it!</button>
 				</div>
 			</div>
@@ -87,7 +87,7 @@
 					<a href="filter_data_dashboard.html" class="featured-grid" style="background-image: url(./images/dashboard_country_sector_chart.png);">
 						<div class="desc">
 							<h3>Filter data in real time</h3>
-							<span>Analyze data by country, sector, period...</span>
+							<span>Analyse data by country, sector, period...</span>
 						</div>
 					</a>
 				</div>
@@ -111,7 +111,7 @@
 							<a href="./big_picture_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_eu_wide_chart.png);">
 								<div class="desc">
 									<h3>Analyse ETS Policies</h3>
-									<span>Analyze the system at a EU wide scale</span>
+									<span>Analyse the system at a EU wide scale</span>
 								</div>
 							</a>
 						</div>
