minor changes to website

--- a/big_picture_dashboard.html
+++ b/big_picture_dashboard.html
@@ -73,7 +73,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Analyse ETS Policies</h2>                    
+					<h2>Analyse EU ETS Policies</h2>                    
 				</div>
 			</div>
             <div class="row">
