--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<div class="col-md-6">
 							<a href="map_the_emissions_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_map1.png);">
 								<div class="desc">
-									<h3>Mapping EUETS Emissions</h3>
+									<h3>Mapping EU ETS Emissions</h3>
 									<span>Navigate through installations</span>
 								</div>
 							</a>
@@ -110,7 +110,7 @@
 						<div class="col-md-6">
 							<a href="./big_picture_dashboard.html" class="featured-grid featured-grid-2" style="background-image: url(./images/dashboard_eu_wide_chart.png);">
 								<div class="desc">
-									<h3>Analyse ETS Policies</h3>
+									<h3>Analyse EU ETS Policies</h3>
 									<span>Analyse the system at a EU wide scale</span>
 								</div>
 							</a>
@@ -153,7 +153,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 					<h2>Challenges and Successes</h2>
-					<p>The ETS remains a broken market, failing to drive the CO2 cuts needed to prevent dangerous climate change, and failing to support the new clean industrial revolution that the EU needs. But Sandbag has had some big successes in improving the scheme.</p>
+					<p>The EU ETS remains a broken market, failing to drive the CO2 cuts needed to prevent dangerous climate change, and failing to support the new clean industrial revolution that the EU needs. But Sandbag has had some big successes in improving the scheme.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -162,7 +162,7 @@
 						<span class="quote"><i class="icon-quote-right"></i></span>
 						<blockquote>
                             <span>Banning HFC offsets</span>
-							<p>At the beginning of the ETS, millions of dodgy carbon offsets flooded the scheme, from greenhouse gas HFC-23, a by-product of the manufacturing of the refrigerant gas HCFC-22. Sandbag successfully helped campaign for them to be banned, protecting the integrity of the ETS.</p>						
+							<p>At the beginning of the EU ETS, millions of dodgy carbon offsets flooded the scheme, from greenhouse gas HFC-23, a by-product of the manufacturing of the refrigerant gas HCFC-22. Sandbag successfully helped campaign for them to be banned, protecting the integrity of the EU ETS.</p>						
 						</blockquote>
 					</div>
 				</div>
@@ -171,7 +171,7 @@
 						<span class="quote"><i class="icon-quote-right"></i></span>
 						<blockquote>
                             <span>Market Stability Reserve</span>
-							<p>A vast surplus of billions of unused pollution allowances keep the ETS price so low. Last year, Sandbag helped win a reform called the Market Stability Reserve, which will eventually remove the surplus from the system. However, the EU needs to take action now, and the new reform won’t get rid of the surplus until around 2030. Quicker action is needed!</p>							
+							<p>A vast surplus of billions of unused pollution allowances keep the EU ETS price so low. Last year, Sandbag helped win a reform called the Market Stability Reserve, which will eventually remove the surplus from the system. However, the EU needs to take action now, and the new reform won’t get rid of the surplus until around 2030. Quicker action is needed!</p>							
 						</blockquote>
 					</div>
 				</div>
