--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -385,7 +385,7 @@
                      <br>
                      <h4>Developers</h4>
                      <p>
-                         This tool was developed by the following <a target='_blank' href="http://www.sandbag.org.uk">Sandbag</a> team members:
+                         This tool was developed by:
                          <ul style="list-style-type:square">
                              <li><a target='_blank' href="http://www.twitter.com/pablopareja"><strong>Pablo Pareja</strong></a> - Main developer and project leader.</li>
                          </ul>
