update contact form email

--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -493,7 +493,7 @@
                      <p class="bg-info">
                          <strong>Notice an interesting story as you’re investigating this data? Have an idea of something else you'd like the Dashboard to do? Please tell us about it here.</strong>
                      </p>
-                     <form id="contact_us_form" role="form" action="http://formspree.io/pablo@sandbag.org.uk" method="POST"
+                     <form id="contact_us_form" role="form" action="http://formspree.io/info@sandbag.org.uk" method="POST"
                            onsubmit="return validateForm()">
                           <input type="hidden" name="_next" value="" />
                           <input type="hidden" name="_subject" value="New submission from EU ETS Dashboard!" />
