--- a/EU_ETS_Dashboard.html
+++ b/EU_ETS_Dashboard.html
@@ -343,7 +343,7 @@
                             -->
                             <div class="pull-right">
                                 <div class="btn-group">
-                                    <button id="swith_chart_data_per_period_button" type="button" class="btn btn-default btn-xs" onclick="onSwitchChartDataPerPeriod(this)" title="Switch chart">Switch to line chart</button>                                     
+                                    <button id="swith_chart_data_per_period_button" type="button" class="btn btn-default btn-xs" onclick="onSwitchChartDataPerPeriod(this)" title="Switch chart">Switch to line chart per year per country</button>                                     
                                 </div>                                
                             </div>
                         </div>
